changes in footer

--- a/career.html
+++ b/career.html
@@ -367,11 +367,11 @@
 		<div class="container">
 			
 			<div class="row">
-				<div class="col-sm-3 col-md-3">
+				<div class="col-sm-4 col-md-4">
 					<div class="footer-item">
-						<img src="images/logo-light.png" alt="logo bottom" class="logo-bottom">
+						<img src="images/karujha_pharmaceuticals_White.png" alt="logo bottom" class="logo-bottom">
 						<p>Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulation.
-</p>
+                         </p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
 								<div class="item">
@@ -396,39 +396,25 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 col-md-3">
-					<div class="footer-item">
-						<div class="footer-title">
-							Recent Post
-						</div>
-						<ul class="recent-post">
-							<li><a href="#" title="">The Best in dolor sit amet consectetur adipisicing elit sed</a>
-							<span class="date"><i class="fa fa-clock-o"></i> June 16, 2017</span></li><li><a href="#" title="">The Best in dolor sit amet consectetur adipisicing elit sed</a>
-							<span class="date"><i class="fa fa-clock-o"></i> June 16, 2017</span></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-3 col-md-3">
+				
+				<div class="col-sm-4 col-md-4">
 					<div class="footer-item">
 						<div class="footer-title">
 							Our Services
 						</div>
 						<ul class="list">
-							<li><a href="service-life-insurance.html" title="">Mechanical Engineering</a></li>
-							<li><a href="service-car-insurance.html" title="">Agricultural Processing</a></li>
-							<li><a href="service-travel-insurance" title="">Oil and Lubricants</a></li>
-							<li><a href="service-house-insurance.html" title="">Power and Energy</a></li>
-							<li><a href="service-vehicle-insurance.html" title="">Chemical Research</a></li>
-							<li><a href="service-boat-insurance.html" title="">Material Engineering</a></li>
+							<li>Sales & Marketing</li>
+							<li>Distributing</li>
+							<li>Co-Development</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-3 col-md-3">
+				<div class="col-sm-4 col-md-4">
 					<div class="footer-item">
 						<div class="footer-title">
 							Subscribe
 						</div>
-						<p>Lit sed The Best in dolor sit amet consectetur adipisicing elit sedconsectetur adipisicing</p>
+				
 						<form action="#" class="footer-subscribe">
 			              <input type="email" name="EMAIL" class="form-control" placeholder="enter your email">
 			              <input id="p_submit" type="submit" value="send">
