--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 					<div class="footer-item">
 						<img src="images/karujha_pharmaceuticals_White.png" alt="logo bottom" class="logo-bottom">
 						<p>Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulation.
-</p>
+                         </p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
 								<div class="item">
@@ -485,12 +485,9 @@
 							Our Services
 						</div>
 						<ul class="list">
-							<li><a href="service-life-insurance.html" title="">Mechanical Engineering</a></li>
-							<li><a href="service-car-insurance.html" title="">Agricultural Processing</a></li>
-							<li><a href="service-travel-insurance" title="">Oil and Lubricants</a></li>
-							<li><a href="service-house-insurance.html" title="">Power and Energy</a></li>
-							<li><a href="service-vehicle-insurance.html" title="">Chemical Research</a></li>
-							<li><a href="service-boat-insurance.html" title="">Material Engineering</a></li>
+							<li>Sales & Marketing</li>
+							<li>Distributing</li>
+							<li>Co-Development</li>
 						</ul>
 					</div>
 				</div>
