--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 	<div id="slides" class="section banner">
 		<ul class="slides-container">
 			<li>
-				<img src="images/slide-1.jpg" alt="">
+				<img src="images/slide-4.jpg" alt="">
 				<div class="overlay-bg"></div>
 				<div class="container">
 					<div class="wrap-caption">
@@ -169,7 +169,7 @@
 				</div>
 			</li>
 			<li>
-				<img src="images/slide-2.jpg" alt="">
+				<img src="images/slide-5.jpg" alt="">
 				<div class="overlay-bg"></div>
 				<div class="container">
 					<div class="wrap-caption">
@@ -281,13 +281,13 @@
 					<!-- BOX 1 -->
 					<div class="feature-box-8">
 		              <div class="media">
-		                <img src="images/service-1.jpg" alt="rud" class="img-responsive">
+		                <img src="images/s1.jpg" alt="rud" class="img-responsive">
 		              </div>
 		              <div class="body">
 		                <div class="icon-holder">
 		                  <span class="fa fa-gears"></span>
 		                </div>
-		                <a href="services-detail.html" class="title">Sales & Marketing </a>
+		                <a href="javascript:void(0)" class="title">Sales & Marketing </a>
 		                <p> Market strategy and promotional plan development </p>
 		                
 		              </div>
@@ -297,13 +297,13 @@
 					<!-- BOX 2 -->
 					<div class="feature-box-8">
 		              <div class="media">
-		                <img src="images/service-2.jpg" alt="rud" class="img-responsive">
+		                <img src="images/s2.jpg" alt="rud" class="img-responsive">
 		              </div>
 		              <div class="body">
 		                <div class="icon-holder">
 		                  <span class="fa fa-leaf"></span>
 		                </div>
-		                <a href="services-detail.html" class="title">Distributing</a>
+		                <a href="javascript:void(0)" class="title">Distributing</a>
 		                <p> API and FDF sourcing </p>
 		                <p> Partner identification and qualification </p>
 		                <p> Supply chain management </p>
@@ -315,13 +315,13 @@
 					<!-- BOX 3 -->
 					<div class="feature-box-8">
 		              <div class="media">
-		                <img src="images/service-3.jpg" alt="rud" class="img-responsive">
+		                <img src="images/s4.jpg" alt="rud" class="img-responsive">
 		              </div>
 		              <div class="body">
 		                <div class="icon-holder">
 		                  <span class="fa fa-fire"></span>
 		                </div>
-		                <a href="services-detail.html" class="title">CO-DEVELOPMENT</a>
+		                <a href="javascript:void(0)" class="title">CO-DEVELOPMENT</a>
 		                <p>New generic registration.</p>	                
 		              </div>
 		            </div>
