--- a/news.html
+++ b/news.html
@@ -180,7 +180,7 @@
 							<img src="images/blog-1.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">The Best in dolor sit amet consectetur adipisicing elit sed</a></div>
+							<div class="title"><a href="javascript:void(0)" title="">The Best in dolor sit amet consectetur adipisicing elit sed</a></div>
 							<div class="meta">
 								<span class="date"><i class="fa fa-clock-o"></i> Apr 25, 2017</span>
 								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
@@ -195,7 +195,7 @@
 							<img src="images/blog-2.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">Cras malesuada elit leo, id ultrices felis porttitor convallis.</a></div>
+							<div class="title"><a href="javascript:void(0)" title="">Cras malesuada elit leo, id ultrices felis porttitor convallis.</a></div>
 							<div class="meta">
 								<span class="date"><i class="fa fa-clock-o"></i> May 7, 2017</span>
 								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
@@ -203,78 +203,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-4">
-					<!-- BOX 3 -->
-					<div class="box-news-1">
-						<div class="media gbr">
-							<img src="images/blog-3.jpg" alt="" class="img-responsive">
-						</div>
-						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">Proin massa sem, tempor eu lacus ut tempor imperdiet purus. Cras at molestie velit.</a></div>
-							<div class="meta">
-								<span class="date"><i class="fa fa-clock-o"></i> May 20, 2017</span>
-								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<!-- BOX 4 -->
-					<div class="box-news-1">
-						<div class="media gbr">
-							<img src="images/blog-4.jpg" alt="" class="img-responsive">
-						</div>
-						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">Suspendisse vel egestas arcu. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas</a></div>
-							<div class="meta">
-								<span class="date"><i class="fa fa-clock-o"></i> Jun 4, 2017</span>
-								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<!-- BOX 4 -->
-					<div class="box-news-1">
-						<div class="media gbr">
-							<img src="images/blog-5.jpg" alt="" class="img-responsive">
-						</div>
-						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">Morbi lacinia neque vitae ipsum tempus malesuada a id ipsum</a></div>
-							<div class="meta">
-								<span class="date"><i class="fa fa-clock-o"></i> Jun 17, 2017</span>
-								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-4">
-					<!-- BOX 4 -->
-					<div class="box-news-1">
-						<div class="media gbr">
-							<img src="images/blog-6.jpg" alt="" class="img-responsive">
-						</div>
-						<div class="body">
-							<div class="title"><a href="blog-single.html" title="">Proin massa sem, tempor eu lacus ut, tempor imperdiet purus. Cras at molestie velit.</a></div>
-							<div class="meta">
-								<span class="date"><i class="fa fa-clock-o"></i> Jul 2, 2017</span>
-								<span class="comments"><i class="fa fa-comment-o"></i> 0 Comments</span>
-							</div>
-						</div>
-					</div>
-				</div>
-
+		
+			
 			</div>
 
-			<div class="row">
-				<div class="col-sm-12 col-md-12">
-					<ul class="pagination">
-						<li class="active"><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-					</ul>
-				</div>
-			</div>
+		
 
 		</div>
 	</div>	
