--- a/index.html
+++ b/index.html
@@ -228,14 +228,9 @@
 			</div>
 
 			<div class="row">
-				<div class="col-sm-5 col-md-5">
-					<div class="jumbo-heading">
-						<h2>OUR REAL COMMITMENT REACHES BEYOND GAS &amp; OIL COMPANY.</h2>
-						<span class="fa fa-paper-plane-o"></span>
-					</div>
-				</div>
-				<div class="col-sm-7 col-md-7">
-					<p class="lead">Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulation.</p> 
+				
+				<div class="col-sm-12 col-md-12">
+					<p class="lead">Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulations.</p> 
 					 
 				</div>
 
@@ -383,8 +378,8 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-4">
 					<div class="footer-item">
-						<img src="images/karujha_pharmaceuticals_White.png" alt="logo bottom" class="logo-bottom">
-						<p>Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulation.
+						<img src="images/logo.png" alt="logo bottom" class="logo-bottom">
+						<p>Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulations.
                          </p>
 						<div class="footer-sosmed">
 							<a href="#" title="">
