--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<!-- ==============================================
 	Favicons
 	=============================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+	
+	<link rel="apple-touch-icon" href="images/logo.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/logo.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/logo.png">
 	
 	<!-- ==============================================
 	CSS VENDOR
@@ -316,8 +316,8 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<div class="cta-info">
-						<h3>If you need industrial solution... We are available for you</h3>
-						<p>We provide innovative solutions for sustainable progress. Our professional team works to increase productivity and cost effectiveness on the market</p>
+						<h3>If you need Pharmaceuticals Requirements... We are available for you</h3>
+						<p>We provide innovative solutions for sustainable progress. Our professional team works to increase productivity and cost effectiveness on the market.</p>
 						<a href="contact.html" title="" class="btn btn-cta">CONTACT US</a>
 					</div>
 				</div>
