--- a/career.html
+++ b/career.html
@@ -14,10 +14,13 @@
 	<!-- ==============================================
 	Favicons
 	=============================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="images/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="images/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="images/site.webmanifest">
+	<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	
 	<!-- ==============================================
 	CSS VENDOR
@@ -369,7 +372,7 @@
 			<div class="row">
 				<div class="col-sm-4 col-md-4">
 					<div class="footer-item">
-						<img src="images/karujha_pharmaceuticals_White.png" alt="logo bottom" class="logo-bottom">
+						<img src="images/logo.png" alt="logo bottom" class="logo-bottom">
 						<p>Karujha Pharmaceuticals is a Indian based Trading & Distributing and development company, founder have more than 20 years of experience in the pharmaceutical industry, specialised in Active Pharmaceutical Ingredients (API), Intermediates, Chemicals and semi formulation.
                          </p>
 						<div class="footer-sosmed">
