--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 	Favicons
 	=============================================== -->
 	
-	<link rel="apple-touch-icon" href="images/logo.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/logo.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/logo.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	<link rel="icon" type="images/png" sizes="32x32" href="images/favicon-32x32.png">
+	<link rel="icon" type="images/png" sizes="16x16" href="images/favicon-16x16.png">
+	<link rel="manifest" href="images/site.webmanifest">
+	<link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 	
 	<!-- ==============================================
 	CSS VENDOR
@@ -64,7 +68,7 @@
 					<div class="col-sm-7 col-md-6">
 						<div class="topbar-right">
 							<ul class="topbar-menu">
-								<li><a href="career.html" title="Career">Career</a></li>						
+								<!-- <li><a href="career.html" title="Career">Career</a></li> -->						
 							</ul>
 							<ul class="topbar-sosmed">
 							<li>
@@ -165,7 +169,7 @@
 
 <div class="row">
   
-  <img src="images/slide-4.jpg" style="width:100%">
+  <img src="images/slide1.jpg" style="width:100%">
 
 </div>
 
@@ -323,7 +327,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-12">
 					<div class="cta-info">
-						<h3>If you need Pharmaceuticals Requirements... We are available for you</h3>
+						<h3>If you have pharmaceuticals requirements... We are available for you</h3>
 						<p>We provide innovative solutions for sustainable progress. Our professional team works to increase productivity and cost effectiveness on the market.</p>
 						<a href="contact.html" title="" class="btn btn-cta">CONTACT US</a>
 					</div>
@@ -502,6 +506,19 @@ function showSlides(n) {
 }
 </script>
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/62f7608d54f06e12d88e67b8/1gab52acc';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 		
 </body>
 </html>
